[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Enemy2AndEffects.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Granny.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Halo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Graphics/icon.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=6]
[ext_resource path="res://Audio/Tense_EDM.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/ComboLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/EnemyAndEffects.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9999, 8 )

[node name="Level" type="Node2D"]
script = ExtResource( 6 )
Enemy1 = ExtResource( 9 )
Enemy2 = ExtResource( 1 )
ComboLabel = ExtResource( 8 )

[node name="Granny" parent="." instance=ExtResource( 2 )]
position = Vector2( -1408, 528 )
scale = Vector2( 0.951956, 1 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( -1328, 544 )
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Floor"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 9 )
scale = Vector2( 99, 0.375 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 12, 64, 48 )

[node name="Halo" parent="." instance=ExtResource( 4 )]

[node name="E1Spawner" type="Timer" parent="."]
autostart = true

[node name="E2Spawner" type="Timer" parent="."]
autostart = true

[node name="PointsTimer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
[connection signal="attack" from="Halo" to="Granny" method="_on_Halo_attack"]
[connection signal="enemy_hit" from="Halo" to="." method="_on_Halo_enemy_hit"]
[connection signal="idle" from="Halo" to="Granny" method="_on_Halo_idle"]
[connection signal="timeout" from="E1Spawner" to="." method="_on_E1Spawner_timeout"]
[connection signal="timeout" from="E2Spawner" to="." method="_on_E2Spawner_timeout"]
[connection signal="timeout" from="PointsTimer" to="." method="_on_PointsTimer_timeout"]
